--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,20 @@
+html {
+  font-size: 10px;
+  font-family: "Spartan", Helvetica, Arial, sans-serif;
+}
+
 header {
-  background-color: #cc3300;
+  background-color: #b32400;
   min-height: 150px;
   text-align: center;
   margin: -8px;
+}
+
+h1 {
+  font-family: "Anton", sans-serif;
+  font-size: 5rem;
+}
+
+p {
+  font-size: 1.8rem;
 }
