--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,42 @@
+/* General style adjustments */
+
 html {
   font-size: 10px;
   font-family: "Spartan", Helvetica, Arial, sans-serif;
 }
+
+h1 {
+  font-family: "Anton", sans-serif;
+  font-size: 5rem;
+  color: #c2c2a3;
+  text-transform: capitalize;
+  text-shadow: 3px 3px 3px black;
+  letter-spacing: 8px;
+  word-spacing: 8px;
+
+  margin-top: 0;
+  padding: 25px;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+p,
+ol,
+ul {
+  font-size: 1.8rem;
+}
+
+/* Page Design */
 
 header {
   background-color: #b32400;
@@ -10,11 +45,9 @@ header {
   margin: -8px;
 }
 
-h1 {
-  font-family: "Anton", sans-serif;
-  font-size: 5rem;
+body {
+  background-color: #c2c2a3;
 }
 
-p {
-  font-size: 1.8rem;
+.content {
 }
