--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,11 @@ body {
 }
 
 .content {
+  background-color: #f5f5ef;
+
+  border: 0.5px solid black;
+  margin: 2vw;
+  padding: 5vw;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
