--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,23 @@ html {
 
 h1 {
   font-family: "Anton", sans-serif;
-  font-size: 5rem;
+  font-size: 5.2rem;
   color: #c2c2a3;
   text-transform: capitalize;
   text-shadow: 3px 3px 3px black;
-  letter-spacing: 8px;
-  word-spacing: 8px;
+  letter-spacing: 10px;
+  word-spacing: 10px;
 
   margin-top: 0;
   padding: 25px;
+}
+
+h2,
+h3,
+h4 {
+  font-weight: bold;
+  letter-spacing: 2px;
+  word-spacing: 3px;
 }
 
 h2 {
@@ -32,8 +40,13 @@ h4 {
 
 p,
 ol,
-ul {
+ul,
+a {
   font-size: 1.8rem;
+}
+
+li > li {
+  font-size: 0.85em;
 }
 
 /* Page Design */
