--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,8 @@ body {
 
 .content {
   background-color: #f5f5ef;
+  box-shadow: 5px 5px 8px black;
 
-  border: 0.5px solid black;
   margin: 2vw;
   padding: 5vw;
   padding-top: 30px;
