--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,12 @@ li > li {
 
 /* Navigation Bar */
 
+nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
 nav ul {
   padding: 0;
   margin: 0;
