--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,18 @@ header {
   text-align: center;
 }
 
+.pagenav {
+  background-color: black;
+  color: white;
+  font-weight: bold;
+
+  margin: 5vw;
+  padding: 5vw;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  max-width: 175px;
+}
+
 .content {
   background-color: #f5f5ef;
   box-shadow: 5px 5px 8px black;
